--- a/flower/index.html
+++ b/flower/index.html
@@ -1,41 +1,15 @@
-<!DOCTYPE html><html q:container="paused" q:version="0.9.0" q:render="ssr" q:base="/build/"><!--qv q:id=0 q:key=3sccYCDd1Z0:--><!--qv q:id=1 q:key=z1nvHyEppoI:--><!--qv q:s q:sref=1 q:key=--><head q:head><meta charSet="utf-8" q:head><!--qv q:id=2 q:key=zrbrqoaqXSY:--><title q:head>Qwik Flower</title><link rel="canonical" href="https://qwik.builder.io/flower" q:head><meta name="viewport" content="width=device-width, initial-scale=1.0" q:head><link rel="icon" type="image/svg+xml" href="/favicon.svg" q:head><link rel="preconnect" href="https://fonts.googleapis.com" q:head><link rel="preconnect" href="https://fonts.gstatic.com" crossOrigin q:head><link href="https://fonts.googleapis.com/css2?family=Poppins&amp;display=swap" rel="stylesheet" q:head><meta property="og:site_name" content="Qwik" q:head><meta name="twitter:site" content="@QwikDev" q:head><meta name="twitter:title" content="Qwik" q:head><!--/qv--><link rel="stylesheet" href="/build/q-0ea8883c.css"></head><body lang="en"><!--qv q:id=3 q:key=nd8yk3KO22c:--><!--qv q:id=4 q:key=VkLNXphUh5s:--><main><!--qv q:sstyle=⭐️rwl3jt-0 q:id=5 q:key=ceU05TscGYE:--><style q:style="rwl3jt-0">header.⭐️rwl3jt-0 {
-  background: var(--qwik-purple);
-}
-header.⭐️rwl3jt-0 {
+<!DOCTYPE html><html q:container="paused" q:version="0.9.0" q:render="ssr" q:base="/build/"><!--qv q:id=0 q:key=0Ky05GxNoW8:--><!--qv q:id=1 q:key=z1nvHyEppoI:--><!--qv q:s q:sref=1 q:key=--><head q:head><meta charSet="utf-8" q:head><!--qv q:id=2 q:key=vsKr0ZqSHfU:--><title q:head>Qwik Flower</title><link rel="canonical" href="https://qwik.builder.io/flower" q:head><meta name="viewport" content="width=device-width, initial-scale=1.0" q:head><link rel="icon" type="image/svg+xml" href="/favicon.svg" q:head><link rel="preconnect" href="https://fonts.googleapis.com" q:head><link rel="preconnect" href="https://fonts.gstatic.com" crossOrigin q:head><link href="https://fonts.googleapis.com/css2?family=Poppins&amp;display=swap" rel="stylesheet" q:head><meta property="og:site_name" content="Qwik" q:head><meta name="twitter:site" content="@QwikDev" q:head><meta name="twitter:title" content="Qwik" q:head><!--/qv--><link rel="stylesheet" href="/build/q-0ea8883c.css"></head><body lang="en"><!--qv q:id=3 q:key=nd8yk3KO22c:--><!--qv q:id=4 q:key=LJXogu0s4bw:--><main><!--qv q:sstyle=⭐️5y41ub-0 q:id=5 q:key=gSIRXOSvTtA:--><style q:style="5y41ub-0">header.⭐️5y41ub-0 {
   display: flex;
-  background: white;
-  border-bottom: 10px solid var(--qwik-dark-purple);
+  background: #222222ee;
+  align-items: center;
+  justify-content: center;
 }
 
-header.⭐️rwl3jt-0 .logo.⭐️rwl3jt-0 a.⭐️rwl3jt-0 {
-  display: inline-block;
-  padding: 10px 10px 7px 20px;
+header.⭐️5y41ub-0 tt.⭐️5y41ub-0 {
+  font-size: 2em;
+  color: #dabbffee;
 }
-
-header.⭐️rwl3jt-0 ul.⭐️rwl3jt-0 {
-  margin: 0;
-  padding: 3px 10px 0 0;
-  list-style: none;
-  flex: 1;
-  text-align: right;
-}
-
-header.⭐️rwl3jt-0 li.⭐️rwl3jt-0 {
-  display: inline-block;
-  margin: 0;
-  padding: 0;
-}
-
-header.⭐️rwl3jt-0 li.⭐️rwl3jt-0 a.⭐️rwl3jt-0 {
-  display: inline-block;
-  padding: 15px 10px;
-  text-decoration: none;
-}
-
-header.⭐️rwl3jt-0 li.⭐️rwl3jt-0 a:hover.⭐️rwl3jt-0 {
-  text-decoration: underline;
-}
-</style><header class="⭐️rwl3jt-0"><div class="⭐️rwl3jt-0 logo"><a href="https://qwik.builder.io/" target="_blank" class="⭐️rwl3jt-0"><svg width="100" height="35" viewBox="0 0 167 53" fill="none" xmlns="http://www.w3.org/2000/svg" class="⭐️rwl3jt-0"><path d="M81.9545 46.5859H75.5513V35.4045C73.4363 36.8579 71.0496 37.5749 68.4884 37.5749C65.0151 37.5749 62.4344 36.6253 60.8239 34.6487C59.2134 32.6915 58.3984 29.2034 58.3984 24.2231C58.3984 19.1266 59.3492 15.5997 61.2702 13.5456C63.23 11.4721 66.3734 10.4644 70.7004 10.4644C74.7946 10.4644 78.5201 11.0264 81.9545 12.131V46.5859ZM75.5513 16.278C74.096 15.8323 72.4661 15.6191 70.7004 15.6191C68.5272 15.6191 66.9749 16.1811 66.1017 17.3244C65.2479 18.4871 64.7823 20.6962 64.7823 23.9712C64.7823 27.0524 65.1897 29.1065 66.0435 30.2304C66.8973 31.335 68.3719 31.897 70.5452 31.897C73.3781 31.897 75.5513 30.7343 75.5513 29.2809V16.278Z" fill="black" class="⭐️rwl3jt-0"></path><path d="M91.133 11.1426C93.4033 17.4406 95.3242 23.7386 96.993 30.0948C99.205 23.5836 101.087 17.2856 102.542 11.1426H108.15C110.265 17.4406 112.031 23.7386 113.447 30.0948C115.97 23.196 117.949 16.8787 119.404 11.1426H125.71C123.033 20.173 120.064 28.777 116.785 36.8966H109.256C108.402 32.3039 107.044 26.7617 105.22 20.1536C104.056 25.2889 102.445 30.8893 100.33 36.8966H92.8018C90.2793 27.5174 87.5434 18.9522 84.6328 11.1426H91.133Z" fill="black" class="⭐️rwl3jt-0"></path><path d="M132.832 7.55758C129.999 7.55758 129.203 6.85996 129.203 3.97257C129.203 1.39523 130.018 0.794495 132.832 0.794495C135.665 0.794495 136.46 1.39523 136.46 3.97257C136.46 6.85996 135.665 7.55758 132.832 7.55758ZM129.649 11.1426H136.053V36.8966H129.649V11.1426Z" fill="black" class="⭐️rwl3jt-0"></path><path d="M166.303 11.1426C161.763 17.5956 158.581 21.5295 156.815 22.9441C158.27 23.8937 162.17 28.8933 167.002 36.916H159.628C153.613 27.7887 150.742 23.8549 149.325 23.2542V36.916H142.922V0H149.325V23.2348C150.78 22.169 153.963 18.1382 158.872 11.1426H166.303Z" fill="black" class="⭐️rwl3jt-0"></path><path d="M40.973 52.5351L32.0861 43.6985L31.9503 43.7179V43.621L13.0511 24.9595L17.708 20.4637L14.9721 4.76715L1.99103 20.8513C-0.220992 23.0798 -0.628467 26.7036 0.962635 29.3778L9.07337 42.8265C10.3152 44.9 12.566 46.1402 14.9915 46.1208L19.0081 46.082L40.973 52.5351Z" fill="#18B6F6" class="⭐️rwl3jt-0"></path><path d="M45.8232 20.5411L44.038 17.2468L43.1066 15.5609L42.738 14.902L42.6992 14.9408L37.8094 6.47238C36.587 4.34075 34.2974 3.02301 31.8137 3.04239L27.5255 3.15865L14.7384 3.19741C12.313 3.21679 10.101 4.49577 8.87853 6.56927L1.09766 21.9945L15.0101 4.72831L33.2496 24.7656L30.0091 28.0406L31.9495 43.7178L31.9689 43.679V43.7178H31.9301L31.9689 43.7565L33.4824 45.2293L40.8364 52.4187C41.1469 52.7094 41.6514 52.3606 41.4379 51.9924L36.8975 43.0589L44.8142 28.4282L45.0664 28.1375C45.1634 28.0212 45.2604 27.905 45.3381 27.7887C46.8904 25.6764 47.1038 22.8472 45.8232 20.5411Z" fill="#AC7EF4" class="⭐️rwl3jt-0"></path><path d="M33.3076 24.6882L15.0099 4.74774L17.61 20.3668L12.9531 24.882L31.9105 43.6985L30.203 28.0794L33.3076 24.6882Z" fill="white" class="⭐️rwl3jt-0"></path></svg></a></div><ul class="⭐️rwl3jt-0"><li class="⭐️rwl3jt-0"><a href="https://qwik.builder.io/docs/components/overview/" target="_blank" class="⭐️rwl3jt-0">Docs</a></li><li class="⭐️rwl3jt-0"><a href="https://qwik.builder.io/examples/introduction/hello-world/" target="_blank" class="⭐️rwl3jt-0">Examples</a></li><li class="⭐️rwl3jt-0"><a href="https://qwik.builder.io/tutorial/welcome/overview/" target="_blank" class="⭐️rwl3jt-0">Tutorials</a></li></ul></header><!--/qv--><section><!--qv q:s q:sref=4 q:key=--><!--qv q:sstyle=⭐️g21qg3-0 q:id=6 q:key=OW4nu0I1yZ8:--><style q:style="g21qg3-0">.host.⭐️g21qg3-0 {
+</style><header class="⭐️5y41ub-0"><tt class="⭐️5y41ub-0">#TIJRADH</tt></header><!--/qv--><section><!--qv q:s q:sref=4 q:key=--><!--qv q:sstyle=⭐️i9zvk8-0 q:id=6 q:key=K8C0ThXn388:--><style q:style="i9zvk8-0">.host.⭐️i9zvk8-0 {
   display: grid;
 
   align-items: center;
@@ -54,11 +28,11 @@ header.⭐️rwl3jt-0 li.⭐️rwl3jt-0 a:hover.⭐️rwl3jt-0 {
   contain: strict;
 }
 
-input.⭐️g21qg3-0 {
+input.⭐️i9zvk8-0 {
   width: 100%;
 }
 
-.square.⭐️g21qg3-0 {
+.square.⭐️i9zvk8-0 {
   --size: calc(40px + var(--index) * var(--size-step));
 
   display: block;
@@ -79,7 +53,7 @@ input.⭐️g21qg3-0 {
   contain: strict;
 }
 
-.square.odd.⭐️g21qg3-0 {
+.square.odd.⭐️i9zvk8-0 {
   --luminance: calc(1 - calc(calc(var(--index) * var(--odd-color-step)) / 256));
   background: rgb(
     calc(172 * var(--luminance)),
@@ -88,22 +62,22 @@ input.⭐️g21qg3-0 {
   );
 }
 
-.pride.⭐️g21qg3-0 .square:nth-child(12n + 1).⭐️g21qg3-0 {
+.pride.⭐️i9zvk8-0 .square:nth-child(12n + 1).⭐️i9zvk8-0 {
   background: #e70000;
 }
-.pride.⭐️g21qg3-0 .square:nth-child(12n + 3).⭐️g21qg3-0 {
+.pride.⭐️i9zvk8-0 .square:nth-child(12n + 3).⭐️i9zvk8-0 {
   background: #ff8c00;
 }
-.pride.⭐️g21qg3-0 .square:nth-child(12n + 5).⭐️g21qg3-0 {
+.pride.⭐️i9zvk8-0 .square:nth-child(12n + 5).⭐️i9zvk8-0 {
   background: #ffef00;
 }
-.pride.⭐️g21qg3-0 .square:nth-child(12n + 7).⭐️g21qg3-0 {
+.pride.⭐️i9zvk8-0 .square:nth-child(12n + 7).⭐️i9zvk8-0 {
   background: #00811f;
 }
-.pride.⭐️g21qg3-0 .square:nth-child(12n + 9).⭐️g21qg3-0 {
+.pride.⭐️i9zvk8-0 .square:nth-child(12n + 9).⭐️i9zvk8-0 {
   background: #0044ff;
 }
-.pride.⭐️g21qg3-0 .square:nth-child(12n + 11).⭐️g21qg3-0 {
+.pride.⭐️i9zvk8-0 .square:nth-child(12n + 11).⭐️i9zvk8-0 {
   background: #760089;
 }
-</style><input type="range" value="20" max="50" class="⭐️g21qg3-0" on:input="q-511811c7.js#s_dznIGAlrcag[0]" on:qvisible="q-511811c7.js#_hW[1]" q:id="7"><div style="--state:0" class="⭐️g21qg3-0 host"><div style="--index:20" class="⭐️g21qg3-0 square" q:key="19"></div><div style="--index:19" class="⭐️g21qg3-0 square odd" q:key="18"></div><div style="--index:18" class="⭐️g21qg3-0 square" q:key="17"></div><div style="--index:17" class="⭐️g21qg3-0 square odd" q:key="16"></div><div style="--index:16" class="⭐️g21qg3-0 square" q:key="15"></div><div style="--index:15" class="⭐️g21qg3-0 square odd" q:key="14"></div><div style="--index:14" class="⭐️g21qg3-0 square" q:key="13"></div><div style="--index:13" class="⭐️g21qg3-0 square odd" q:key="12"></div><div style="--index:12" class="⭐️g21qg3-0 square" q:key="11"></div><div style="--index:11" class="⭐️g21qg3-0 square odd" q:key="10"></div><div style="--index:10" class="⭐️g21qg3-0 square" q:key="9"></div><div style="--index:9" class="⭐️g21qg3-0 square odd" q:key="8"></div><div style="--index:8" class="⭐️g21qg3-0 square" q:key="7"></div><div style="--index:7" class="⭐️g21qg3-0 square odd" q:key="6"></div><div style="--index:6" class="⭐️g21qg3-0 square" q:key="5"></div><div style="--index:5" class="⭐️g21qg3-0 square odd" q:key="4"></div><div style="--index:4" class="⭐️g21qg3-0 square" q:key="3"></div><div style="--index:3" class="⭐️g21qg3-0 square odd" q:key="2"></div><div style="--index:2" class="⭐️g21qg3-0 square" q:key="1"></div><div style="--index:1" class="⭐️g21qg3-0 square odd" q:key="0"></div></div><!--/qv--><!--/qv--></section></main><footer><a href="https://www.builder.io/" target="_blank">Made with ♡ by Builder.io</a></footer><!--/qv--><!--/qv--><script>((s,a,r,i)=>{r=(e,t)=>{t=document.querySelector("[q\\:base]"),t&&a.active&&a.active.postMessage({type:"qprefetch",base:t.getAttribute("q:base"),...e})},addEventListener("qprefetch",e=>{const t=e.detail;a?r(t):t.bundles&&s.push(...t.bundles)}),navigator.serviceWorker.register("/service-worker.js").then(e=>{i=()=>{a=e,r({bundles:s})},e.installing?e.installing.addEventListener("statechange",t=>{t.target.state=="activated"&&i()}):e.active&&i()}).catch(e=>console.error(e))})([])</script></body><!--/qv--><!--/qv--><!--/qv--><script type="qwik/json">{"ctx":{"#1":{"c":"qc-c=h! qc-ic=i! qc-h=n! qc-l=2! qc-n=3!"},"#6":{"h":"1! a","w":"9","s":"b 2! 0! g"},"#7":{"r":"0! 9"}},"objs":[{"count":"7","number":"8"},{},{"href":"c","pathname":"d","query":"e","params":"f"},{"path":"d"},1,3,"\u0002q-511811c7.js#s_V0Y6u0VD1eY[0!]",0,20,"\u00031 3 6 #6","\u0002q-511811c7.js#s_OW4nu0I1yZ8","g21qg3-0","https://qwik.builder.io/flower","/flower",{},{},true,{"headings":"o","menu":"o"},{"contents":"o"},"Qwik Flower",[],[],[],{"title":"j","meta":"k","links":"l","styles":"m"},"\u0001"],"subs":[{"#6":["number","count"]},{"$":2},{"#6":["query"]},{}]}</script><script type="module">dispatchEvent(new CustomEvent("qprefetch",{detail:{"bundles":["q-511811c7.js","q-6ffd38ab.js","q-78196246.js"]}}))</script><script id="qwikloader">(()=>{function e(e){return"object"==typeof e&&e&&"Module"===e[Symbol.toStringTag]}((t,n)=>{const o="__q_context__",r=window,a=(e,n,o)=>{n=n.replace(/([A-Z])/g,(e=>"-"+e.toLowerCase())),t.querySelectorAll("[on"+e+"\\:"+n+"]").forEach((t=>l(t,e,n,o)))},i=(e,t)=>new CustomEvent(e,{detail:t}),s=e=>{throw Error("QWIK "+e)},c=(e,n)=>(e=e.closest("[q\\:container]"),new URL(n,new URL(e?e.getAttribute("q:base"):t.baseURI,t.baseURI))),l=async(n,a,l,d)=>{var u;n.hasAttribute("preventdefault:"+l)&&d.preventDefault();const b="on"+a+":"+l,v=null==(u=n._qc_)?void 0:u.li[b];if(v){for(const e of v)await e.getFn([n,d],(()=>n.isConnected))(d,n);return}const p=n.getAttribute(b);if(p)for(const a of p.split("\n")){const l=c(n,a);if(l){const a=f(l),c=(r[l.pathname]||(w=await import(l.href.split("#")[0]),Object.values(w).find(e)||w))[a]||s(l+" does not export "+a),u=t[o];if(n.isConnected)try{t[o]=[n,d,l],await c(d,n)}finally{t[o]=u,t.dispatchEvent(i("qsymbol",{symbol:a,element:n}))}}}var w},f=e=>e.hash.replace(/^#?([^?[|]*).*$/,"$1")||"default",d=async e=>{let t=e.target;for(a("-document",e.type,e);t&&t.getAttribute;)await l(t,"",e.type,e),t=e.bubbles&&!0!==e.cancelBubble?t.parentElement:null},u=e=>{a("-window",e.type,e)},b=()=>{const e=t.readyState;if(!n&&("interactive"==e||"complete"==e)){n=1,a("","qinit",i("qinit"));const e=t.querySelectorAll("[on\\:qvisible]");if(e.length>0){const t=new IntersectionObserver((e=>{for(const n of e)n.isIntersecting&&(t.unobserve(n.target),l(n.target,"","qvisible",i("qvisible",n)))}));e.forEach((e=>t.observe(e)))}}},v=new Set,p=e=>{for(const t of e)v.has(t)||(document.addEventListener(t,d,{capture:!0}),r.addEventListener(t,u),v.add(t))};if(!t.qR){const e=r.qwikevents;Array.isArray(e)&&p(e),r.qwikevents={push:(...e)=>p(e)},t.addEventListener("readystatechange",b),b()}})(document)})();</script><script>window.qwikevents.push("input", "qvisible")</script></html>
+</style><input type="range" value="20" max="50" class="⭐️i9zvk8-0" on:input="/inlinedQRL#s_8iUCT5aUsHU[0]" on:qvisible="/inlinedQRL#_hW[1]" q:id="7"><div style="--state:0" class="⭐️i9zvk8-0 host"><div style="--index:20" class="⭐️i9zvk8-0 square" q:key="19"></div><div style="--index:19" class="⭐️i9zvk8-0 square odd" q:key="18"></div><div style="--index:18" class="⭐️i9zvk8-0 square" q:key="17"></div><div style="--index:17" class="⭐️i9zvk8-0 square odd" q:key="16"></div><div style="--index:16" class="⭐️i9zvk8-0 square" q:key="15"></div><div style="--index:15" class="⭐️i9zvk8-0 square odd" q:key="14"></div><div style="--index:14" class="⭐️i9zvk8-0 square" q:key="13"></div><div style="--index:13" class="⭐️i9zvk8-0 square odd" q:key="12"></div><div style="--index:12" class="⭐️i9zvk8-0 square" q:key="11"></div><div style="--index:11" class="⭐️i9zvk8-0 square odd" q:key="10"></div><div style="--index:10" class="⭐️i9zvk8-0 square" q:key="9"></div><div style="--index:9" class="⭐️i9zvk8-0 square odd" q:key="8"></div><div style="--index:8" class="⭐️i9zvk8-0 square" q:key="7"></div><div style="--index:7" class="⭐️i9zvk8-0 square odd" q:key="6"></div><div style="--index:6" class="⭐️i9zvk8-0 square" q:key="5"></div><div style="--index:5" class="⭐️i9zvk8-0 square odd" q:key="4"></div><div style="--index:4" class="⭐️i9zvk8-0 square" q:key="3"></div><div style="--index:3" class="⭐️i9zvk8-0 square odd" q:key="2"></div><div style="--index:2" class="⭐️i9zvk8-0 square" q:key="1"></div><div style="--index:1" class="⭐️i9zvk8-0 square odd" q:key="0"></div></div><!--/qv--><!--/qv--></section></main><footer>brought to you by <a href="https://almost-dead.net" target="_blank">Almost-Dead.net</a></footer><!--/qv--><!--/qv--><script>((s,a,r,i)=>{r=(e,t)=>{t=document.querySelector("[q\\:base]"),t&&a.active&&a.active.postMessage({type:"qprefetch",base:t.getAttribute("q:base"),...e})},addEventListener("qprefetch",e=>{const t=e.detail;a?r(t):t.bundles&&s.push(...t.bundles)}),navigator.serviceWorker.register("/service-worker.js").then(e=>{i=()=>{a=e,r({bundles:s})},e.installing?e.installing.addEventListener("statechange",t=>{t.target.state=="activated"&&i()}):e.active&&i()}).catch(e=>console.error(e))})([])</script></body><!--/qv--><!--/qv--><!--/qv--><script type="qwik/json">{"ctx":{"#1":{"c":"qc-c=h! qc-ic=i! qc-h=n! qc-l=2! qc-n=3!"},"#6":{"h":"1! a","w":"9","s":"b 2! 0! g"},"#7":{"r":"0! 9"}},"objs":[{"count":"7","number":"8"},{},{"href":"c","pathname":"d","query":"e","params":"f"},{"path":"d"},1,3,"\u0002/inlinedQRL#s_XoIKnoKpic0[0!]",0,20,"\u00031 3 6 #6","\u0002/inlinedQRL#s_K8C0ThXn388","i9zvk8-0","https://qwik.builder.io/flower","/flower",{},{},true,{"headings":"o","menu":"o"},{"contents":"o"},"Qwik Flower",[],[],[],{"title":"j","meta":"k","links":"l","styles":"m"},"\u0001"],"subs":[{"#6":["number","count"]},{"$":2},{"#6":["query"]},{}]}</script><script id="qwikloader">(()=>{function e(e){return"object"==typeof e&&e&&"Module"===e[Symbol.toStringTag]}((t,n)=>{const o="__q_context__",r=window,a=(e,n,o)=>{n=n.replace(/([A-Z])/g,(e=>"-"+e.toLowerCase())),t.querySelectorAll("[on"+e+"\\:"+n+"]").forEach((t=>l(t,e,n,o)))},i=(e,t)=>new CustomEvent(e,{detail:t}),s=e=>{throw Error("QWIK "+e)},c=(e,n)=>(e=e.closest("[q\\:container]"),new URL(n,new URL(e?e.getAttribute("q:base"):t.baseURI,t.baseURI))),l=async(n,a,l,d)=>{var u;n.hasAttribute("preventdefault:"+l)&&d.preventDefault();const b="on"+a+":"+l,v=null==(u=n._qc_)?void 0:u.li[b];if(v){for(const e of v)await e.getFn([n,d],(()=>n.isConnected))(d,n);return}const p=n.getAttribute(b);if(p)for(const a of p.split("\n")){const l=c(n,a);if(l){const a=f(l),c=(r[l.pathname]||(w=await import(l.href.split("#")[0]),Object.values(w).find(e)||w))[a]||s(l+" does not export "+a),u=t[o];if(n.isConnected)try{t[o]=[n,d,l],await c(d,n)}finally{t[o]=u,t.dispatchEvent(i("qsymbol",{symbol:a,element:n}))}}}var w},f=e=>e.hash.replace(/^#?([^?[|]*).*$/,"$1")||"default",d=async e=>{let t=e.target;for(a("-document",e.type,e);t&&t.getAttribute;)await l(t,"",e.type,e),t=e.bubbles&&!0!==e.cancelBubble?t.parentElement:null},u=e=>{a("-window",e.type,e)},b=()=>{const e=t.readyState;if(!n&&("interactive"==e||"complete"==e)){n=1,a("","qinit",i("qinit"));const e=t.querySelectorAll("[on\\:qvisible]");if(e.length>0){const t=new IntersectionObserver((e=>{for(const n of e)n.isIntersecting&&(t.unobserve(n.target),l(n.target,"","qvisible",i("qvisible",n)))}));e.forEach((e=>t.observe(e)))}}},v=new Set,p=e=>{for(const t of e)v.has(t)||(document.addEventListener(t,d,{capture:!0}),r.addEventListener(t,u),v.add(t))};if(!t.qR){const e=r.qwikevents;Array.isArray(e)&&p(e),r.qwikevents={push:(...e)=>p(e)},t.addEventListener("readystatechange",b),b()}})(document)})();</script><script>window.qwikevents.push("input", "qvisible")</script></html>
