--- a/flower/index.html
+++ b/flower/index.html
@@ -7,7 +7,8 @@
 
 header.⭐️5y41ub-0 tt.⭐️5y41ub-0 {
   font-size: 2em;
-  color: #dabbffee;
+  color: dimgray;
+  line-height: 1.5em;
 }
 </style><header class="⭐️5y41ub-0"><tt class="⭐️5y41ub-0">#TIJRADH</tt></header><!--/qv--><section><!--qv q:s q:sref=4 q:key=--><!--qv q:sstyle=⭐️i9zvk8-0 q:id=6 q:key=K8C0ThXn388:--><style q:style="i9zvk8-0">.host.⭐️i9zvk8-0 {
   display: grid;
